Ajout de la description perso

--- a/index.html
+++ b/index.html
@@ -55,15 +55,10 @@
 		<div class="a-propos-container">
 			<div class="column-left">
 				<h3>Apprenez à me connaitre !</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae ultricies mauris. Proin dictum,
-					elit sit
-					amet vestibulum sodales, sapien risus efficitur tellus, vel dignissim velit justo quis nisi.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae ultricies mauris. Proin dictum,
-					elit sit
-					amet vestibulum sodales, sapien risus efficitur tellus, vel dignissim velit justo quis nisi.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae ultricies mauris. Proin dictum,
-					elit sit
-					amet vestibulum sodales, sapien risus efficitur tellus, vel dignissim velit justo quis nisi.</p>
+				J’ai toujours été passionné par le monde de l'informatique et j'ai acquis de solides compétences en
+				programmation, en développement web, en administration système ainsi qu'en base de données. J'ai
+				également participé à plusieurs projets en groupe comme les 24h de l'informatique, ce qui m'a permis de
+				développer mes capacités de travail en équipe et de communication.
 			</div>
 
 			<div class="column-right">
@@ -123,8 +118,7 @@
 				</div>
 
 				<div class="project-img">
-					<img src="./img/world.jpg"
-						alt="" />
+					<img src="./img/world.jpg" alt="" />
 				</div>
 
 			</div>
