--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 		<div class="a-propos-container">
 			<div class="column-left">
 				<h3>Apprenez à me connaitre !</h3>
+				<br>
 				J’ai toujours été passionné par le monde de l'informatique et j'ai acquis de solides compétences en
-				programmation, en développement web, en administration système ainsi qu'en base de données. J'ai
+				programmation, en développement web, en administration système ainsi qu'en base de données. <br><br>J'ai
 				également participé à plusieurs projets en groupe comme les 24h de l'informatique, ce qui m'a permis de
 				développer mes capacités de travail en équipe et de communication.
 			</div>
@@ -67,8 +68,9 @@
 				<div class="l-container">
 					<div class="l-column-left">
 						<div class="row">
+							<div class="box">C</div>
+							<div class="box">C++</div>
 							<div class="box">C#</div>
-							<div class="box">CSS</div>
 							<div class="box">SQL</div>
 
 						</div>
@@ -76,8 +78,9 @@
 					<div class="l-column-right">
 
 						<div class="row">
-							<div class="box">C++</div>
 							<div class="box">HTML</div>
+							<div class="box">CSS</div>
+							<div class="box">JS</div>
 							<div class="box">Shell</div>
 						</div>
 					</div>
