Ajout d'un projet + Correction boutonCV
Ajout d'un début de projet (Nect's engima)

Correction de la zone cliquable pour le CV

Réduction de la taille du logo

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 			<li><a href="#contact">//Contact</a></li>
 		</div>
 
-		<div class="CV">
-			<h3><a href="./doc/CV_Theo_de_Boisvilliers.pdf" target="_blank">CV</a></h3>
-		</div>
+		<a href="./doc/CV_Theo_de_Boisvilliers.pdf" target="_blank">
+			<div class="CV">
+				<h3 id="CV">CV</h3>
+			</div>
+		</a>
 
 
 	</header>
@@ -35,7 +37,7 @@
 	<div class="title">
 		<h1>Théo de Boisvilliers(){<br>
 			<h1>//Etudiant en Informatique</h1>
-			<p>std::cout&lt;&lt;<br>"Je suis un étudiant en BUT Informatique à Nevers spécialisé dans la développement
+			<p>std::cout&lt;&lt;<br>"Je suis un étudiant en BUT Informatique à Nevers spécialisé dans le développement
 				web et d&apos;application. Actuellement, je suis à la recherche d&apos;une
 				alternance.";<br>&lt;&lt;std::endl;</p>
 			}
@@ -90,44 +92,91 @@
 		</div>
 
 
-		<br><br><br><br><br><br><br><br>
-
-		<h2 id="experience" class="custom-h2">Expériences</h2>
-		<br><br>
-
-
-
-
-		<br><br>
-
 		<h2 id="projets" class="custom-h2">Projets</h2>
 
-		<div class="project-container">
-			<div class="project">
-				<div class="project-content">
-					<div class="project-label">Game of Thrones</div>
-					<h4 class="project-title">A Clash of Kings</h4>
-					<div class="project-details">
-						<p>Lorem ipsum dolor amet you probably haven't heard of them bitters selvage listicle heirloom.
-							Locavore kombucha street art ennui 90's, organic food truck hell of seitan skateboard
-							literally hexagon fixie next level. Lomo salvia yuccie hella roof party echo park vegan four
-							dollar toast cred.</p>
-						<ul>
-							<li>Shadow</li>
-							<li>Demon</li>
-							<li>Baby</li>
-						</ul>
-					</div>
-				</div>
 
-				<div class="project-img">
-					<img src="./img/world.jpg" alt="" />
+		<div class="projets">
+			<div class="contenu">
+				<img class="image" src="img/Nect.png" alt="Image">
+				<div class="text">
+					<h2>Jeu de casse tête en JS</h2>
+					<p>Lors d'une SAE en BUT Informatique nous avons réalisé en groupe de 4 un jeu vidéo en javascript
+						de casse tête</p>
+						<button></button>
 				</div>
-
 			</div>
 		</div>
 
-		<br><br>
+		<br><br><br>
+
+		<h2>Autre titre</h2>
+		<div class="projets">
+			<div class="contenu">
+				<img class="image" src="img/world.jpg" alt="Image">
+				<div class="text">
+					<h2>Titre</h2>
+					<p>Votre texte ici</p>
+				</div>
+			</div>
+		</div>
+
+
+
+
+
+		<br><br><br>
+
+		<h2 id="experience" class="custom-h2">Expériences</h2>
+
+		<div class="a-propos-container">
+			<div class="column-left">
+				<h3>24h de l'informatique <br>
+					Presques 24h de l'informatique
+				</h3>
+				<h3></h3>
+				<br>
+				<div class="box">2023</div>
+				<div class="box">Dijon</div>
+				<div class="box">Bourg-en-Bresse</div>
+			</div>
+
+			<div class="column-right">
+				<h4>Résumé :</h4>
+				J'ai eu la chance de prendre part aux 24 heures de l'informatique nationale. Cet événement m'a permis de
+				travailler en équipe et d'affiner mes compétences en informatique.
+				<br><br>
+				De plus, j'ai eu l'honneur de remporter l'épreuve de web lors d'une autre édition des 24 heures de
+				l'informatique.
+			</div>
+		</div>
+
+
+		<br><br><br><br>
+
+
+		<div class="a-propos-container">
+			<div class="column-left">
+				<h3>Surveillant de plage - BNSSA <br></h3>
+				<br>
+				<div class="box">2023</div>
+				<div class="box">Nevers</div>
+				<div class="box">Nevers Plage</div>
+			</div>
+
+			<div class="column-right">
+				<h4>Résumé :</h4>
+				En Juillet et Aout 2023, j'ai eu l'opportunité de travailler à la plage de Nevers en tant que BNSSA
+				<br><br>
+				fezfezfezfezfezfezfezfezfezfez
+			</div>
+		</div>
+
+
+
+
+
+
+		<br><br><br>
 
 		<h2 id="contact" class="custom-h2">Contact</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae ultricies mauris. Proin dictum, elit sit
