Redirection réseaux + bouton dialogue
Ajout des réseaux de façon fonctionnelle en bas de page

Ajout d'un bouton pour l'ouverture de la balise dialogue

--- a/index.html
+++ b/index.html
@@ -100,9 +100,14 @@
 				<img class="image" src="img/Nect.png" alt="Image">
 				<div class="text">
 					<h2>Jeu de casse tête en JS</h2>
+					<h3>Projet de cours</h3>
+
+					<br>
+
 					<p>Lors d'une SAE en BUT Informatique nous avons réalisé en groupe de 4 un jeu vidéo en javascript
 						de casse tête</p>
-						<button></button>
+					<br>-<br><br><br>
+					<button>Pour en savoir plus</button>
 				</div>
 			</div>
 		</div>
@@ -179,9 +184,28 @@
 		<br><br><br>
 
 		<h2 id="contact" class="custom-h2">Contact</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae ultricies mauris. Proin dictum, elit sit
-			amet vestibulum sodales, sapien risus efficitur tellus, vel dignissim velit justo quis nisi.</p>
+		<p>Vous pouvez me retrouver et me contacter ici :</p>
+		<diV id="reseaux">
+			<div>
+				<a href="mailto:theodb51@gmail.com">
+					<img src="./img/mail.png" alt="Logo tournant" class="reseaux">
+					<p>theodb51@gmail.com</p>
+				</a>
+			</div>
+			<div>
+				<a href="https://www.linkedin.com/in/th%C3%A9o-de-boisvilliers/">
+					<img src="./img/ld.png" alt="Logo tournant" class="reseaux">
+					<p>théo-de-boisvilliers</p>
+				</a>
+			</div>
+			<div>
+				<a href="https://github.com/theodb51">
+					<img src="./img/github.png" alt="Logo tournant" class="reseaux">
+					<p>theodb51</p>
+				</a>
 
+			</div>
+		</diV>
 
 
 
