Final version sans bouton
- Suppression bouton
- Correction de l'espacement des boutons pour les réseaux

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</div>
 	</div>
 
-	<br><br><br>
+	<br><br><br><br><br>
 	<main>
 
 		<h2 id="a-propos" class="custom-h2">A propos de moi</h2>
@@ -106,24 +106,17 @@
 
 					<p>Lors d'une SAE en BUT Informatique nous avons réalisé en groupe de 4 un jeu vidéo en javascript
 						de casse tête</p>
-					<br>-<br><br><br>
-					<button>Pour en savoir plus</button>
+					<br>-<br><br>
+					<p>Le jeu est composé de plusieurs niveaux, d'un menu de séléction des personnages, la possibilité d'importer ses propres niveaux ou encore d'un controleur pour la musique.</p>
+					<br>
+
 				</div>
 			</div>
 		</div>
 
 		<br><br><br>
 
-		<h2>Autre titre</h2>
-		<div class="projets">
-			<div class="contenu">
-				<img class="image" src="img/world.jpg" alt="Image">
-				<div class="text">
-					<h2>Titre</h2>
-					<p>Votre texte ici</p>
-				</div>
-			</div>
-		</div>
+		
 
 
 
@@ -151,7 +144,7 @@
 				travailler en équipe et d'affiner mes compétences en informatique.
 				<br><br>
 				De plus, j'ai eu l'honneur de remporter l'épreuve de web lors d'une autre édition des 24 heures de
-				l'informatique.
+				l'informatique à Dijon.
 			</div>
 		</div>
 
