Final sans bouton V2
- Ajout des images pour les expériences
- Finalisation des textes

--- a/index.html
+++ b/index.html
@@ -136,9 +136,11 @@
 				<div class="box">2023</div>
 				<div class="box">Dijon</div>
 				<div class="box">Bourg-en-Bresse</div>
+				<img src="./img/logoDUTDptInfo.png" class="imgexp">
 			</div>
 
 			<div class="column-right">
+				<br><br>
 				<h4>Résumé :</h4>
 				J'ai eu la chance de prendre part aux 24 heures de l'informatique nationale. Cet événement m'a permis de
 				travailler en équipe et d'affiner mes compétences en informatique.
@@ -159,13 +161,15 @@
 				<div class="box">2023</div>
 				<div class="box">Nevers</div>
 				<div class="box">Nevers Plage</div>
+				<img src="./img/nevers_plage.jpg" class="imgexp">
 			</div>
 
 			<div class="column-right">
-				<h4>Résumé :</h4>
-				En Juillet et Aout 2023, j'ai eu l'opportunité de travailler à la plage de Nevers en tant que BNSSA
 				<br><br>
-				fezfezfezfezfezfezfezfezfezfez
+				<h4>Résumé :</h4>
+				En Juillet et Aout 2023, j'ai eu l'opportunité de travailler à la plage de Nevers en tant que BNSSA, ceci grâce au formation de PSE1 et BNSSA passées durant la même année.
+				<br><br>
+				Cette expérience m'a apporté de l'expérience sur le travail en équipe ainsi qu'un savoir faire en secourisme.
 			</div>
 		</div>
 
@@ -181,19 +185,19 @@
 		<diV id="reseaux">
 			<div>
 				<a href="mailto:theodb51@gmail.com">
-					<img src="./img/mail.png" alt="Logo tournant" class="reseaux">
+					<img src="./img/mail.png"  class="reseaux">
 					<p>theodb51@gmail.com</p>
 				</a>
 			</div>
 			<div>
 				<a href="https://www.linkedin.com/in/th%C3%A9o-de-boisvilliers/">
-					<img src="./img/ld.png" alt="Logo tournant" class="reseaux">
+					<img src="./img/ld.png"  class="reseaux">
 					<p>théo-de-boisvilliers</p>
 				</a>
 			</div>
 			<div>
 				<a href="https://github.com/theodb51">
-					<img src="./img/github.png" alt="Logo tournant" class="reseaux">
+					<img src="./img/github.png" class="reseaux">
 					<p>theodb51</p>
 				</a>
 
